maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:75: error: not found: type int
def Abs(x:int):int={
               ^ShortestPathMaze:75: error: not found: type int
def Abs(x:int):int={
          ^